@@ -1,15 +1,21 @@
  - merge GAMIN_EVENT_ with FAMEvents ?
  - try to use getlogin and $USER to get the user name
  - doc extraction and reformatting of comments in gtk-doc style
- - handling of missing monitored resources where dnotify() won't work
+ - handling of directory removal (need to poll on monitored empty dirs).
+ - special case where dnotify is not a good idea (temporary storage)
+ - automatic switch from dnotify to poll for resources getting too much
+   kernel events.
  - "make valgrind" regression tests for both client and server.
  - fix "make tests" to use /tmp to avoid $pwd in the paths of the output
+ - try to work around the fact the stat() info precision is only 1 sec
+   on ext2/ext3, especially for directories.
                                                                                 
 Regression tests:
  - try all the file length on the client till error.
  - try the fragmented/multirequests tests on the client side
 
 Done:
+ - handling of missing monitored resources where dnotify() won't work
  - <markmc> DV, gam_server should prolly be in /usr/libexec
  - path flexibility for the remote server in gam_fork.c (needed for
    make tests)
