@@ -1,0 +1,12 @@
+connected to test
+mondir test1 0
+1: /u/veillard/gamin/tests/test1 Deleted: NULL
+1: /u/veillard/gamin/tests/test1 EndExist: NULL
+mkdir test1
+1: /u/veillard/gamin/tests/test1 Created: NULL
+mkfile test1/foo
+1: foo Created: NULL
+rmfile test1/foo
+1: foo Deleted: NULL
+disconnected
+rmdir test1
